# psychevo

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  wdio.json
apps/desktop/src-tauri/src/: capture.rs  desktop_host.rs  gateway.rs  lib.rs  main.rs  startup_trace.rs
crates/psychevo-acp/: Cargo.toml
crates/psychevo-acp/src/: commands.rs  lib.rs  main.rs  protocol.rs  session_bridge.rs  stdio.rs
crates/psychevo-acp/src/commands/: agent_commands.rs  live_projection.rs  slash_diff_sessions.rs  tests.rs
crates/psychevo-acp/src/protocol/: core_types.rs  session_updates.rs
crates/psychevo-acp/src/session_bridge/: imports.rs  session_controls.rs  slash_and_status.rs
crates/psychevo-acp/src/stdio/: agent_lifecycle.rs  options_and_tests.rs  runtime_options.rs
crates/psychevo-agent-core/: Cargo.toml
crates/psychevo-agent-core/src/: control.rs  events.rs  lib.rs  request.rs  support.rs  tests.rs  tool_router.rs  types.rs
crates/psychevo-agent-core/src/agent/: assistant.rs  loop.rs  stream.rs  tools.rs
crates/psychevo-agent-core/tests/: agent_loop.rs
crates/psychevo-ai/: Cargo.toml
crates/psychevo-ai/src/: control.rs  fake.rs  image_generation.rs  lib.rs  metadata.rs  tests.rs  types.rs  voice.rs
crates/psychevo-ai/src/openai/: http.rs  provider.rs  request.rs  responses.rs
crates/psychevo-ai/src/stream/: chat_chunks.rs  raw.rs  sse.rs
crates/psychevo-ai/src/tests/: provider_http.rs  request_streaming.rs
crates/psychevo-ai/tests/: fake_provider.rs  voice.rs
crates/psychevo-cli/: Cargo.toml
crates/psychevo-cli/src/: args.rs  command_registry.rs  env.rs  main.rs  profiles.rs  provider_setup.rs  tui.rs  tui_render.rs  tui_slash.rs  tui_state.rs
crates/psychevo-cli/src/args/: admin_commands.rs  core_commands.rs
crates/psychevo-cli/src/commands/: agent.rs  auth.rs  common.rs  config.rs  context.rs  desktop.rs  doctor.rs  gateway.rs  hooks.rs  init.rs  mcp.rs  mod.rs  model.rs  plugin.rs  profile.rs  run.rs  serve.rs  session.rs  setup.rs  skills.rs  smoke.rs  stats.rs  tool.rs
crates/psychevo-cli/src/snapshots/: active_reasoning_write.snap  active_visible_write_preamble.snap  active_write_after_visible_answer.snap  model_info_tab.snap  (+32 more)
crates/psychevo-cli/templates/: starter-config.toml
crates/psychevo-cli/tests/: smoke_cli.rs
crates/psychevo-eval/: Cargo.toml
crates/psychevo-eval/scripts/: live-psychevo-smoke.sh
crates/psychevo-eval/src/: analysis.rs  cli.rs  lib.rs  main.rs  reporting.rs  runner.rs  schema_store.rs  serve.rs  service.rs  store.rs  views.rs
crates/psychevo-eval/templates/: pidx-fake-patch-add.eval.toml  pidx-psychevo-acp.eval.toml  pidx-psychevo-patch-add.eval.toml
crates/psychevo-eval/tests/: pidx_coding.rs
crates/psychevo-gateway/: Cargo.toml
crates/psychevo-gateway/assets/: codex-acp-package-lock.json
crates/psychevo-gateway/src/: acp_peer.rs  history_editing.rs  im.rs  im_adapters.rs  journey_profile.rs  lib.rs  managed_acp.rs  projection.rs  protocol.rs  server.rs  transcript.rs
crates/psychevo-runtime/: Cargo.toml
crates/psychevo-runtime-host/: Cargo.toml
crates/psychevo-runtime-host/src/: contract.rs  host.rs  lib.rs
crates/psychevo-runtime-host/tests/: codex_stdio.rs  opencode_fake.rs
crates/psychevo-runtime/src/: accounting.rs  agents.rs  automations.rs  capabilities.rs  capability_snapshot.rs  command_registry.rs  compaction.rs  config.rs  context.rs  context_usage.rs  contribution_projection.rs  error.rs  events.rs  extensions.rs  filesystem_identity.rs  host_paths.rs  host_process.rs  lib.rs  managed_tools.rs  mcp.rs  media.rs  messages.rs  model_state.rs  paths.rs  permissions.rs  process_env.rs  project_instructions.rs  prompt_assembly.rs  prompt_image.rs  prompt_templates.rs  run.rs  sandbox.rs  session_export.rs  session_lookup.rs  session_trace.rs  skills.rs  smoke.rs  snapshot.rs  state_runtime.rs  stats.rs  (+10 more)
crates/psychevo-runtime/templates/: agent_catalog.md  child_agent_control.md  compaction_summary_manual_focus_section.md  compaction_summary_prefix.md  compaction_summary_previous_section.md  compaction_summary_system.md  compaction_summary_user.md  project_context.md  required_agent_calls.md  selected_child_agent.md  selected_child_agent.with_instructions.md  selected_main_agent.md  selected_main_agent.with_instructions.md  selected_system_agent.md  selected_system_agent.with_instructions.md  session_title_instruction.md  session_title_request.md  session_title_request.selected_skills.md  side_boundary.md  skill_index.md
crates/psychevo-runtime/tests/: host_process.rs  live_providers.rs  public_api.rs  runtime_smoke.rs
tools/peval-py/: README.md  README.zh-CN.md  pyproject.toml
tools/peval-py/tests/: cli_inputs_support.py  peval_py_test_support.py  reports_html_support.py  serve_state_support.py  test_cli_inputs.py  test_cli_inputs_analysis.py  test_cli_inputs_inspect.py  test_cli_inputs_sources.py  test_cli_inputs_tables_export.py  test_cli_inputs_workspace_snapshots.py  test_config_adapters.py  test_peval_py.py  test_reports_html.py  test_reports_html_assets_tokens.py  test_reports_html_core.py  test_reports_html_interactions.py  test_reports_html_serve_locale.py  test_reports_html_timeline.py  test_serve_state.py  test_serve_state_http_sources.py  test_serve_state_notes_db.py  test_serve_state_workspace.py  test_skill_package.py  test_sources_conversion.py  test_workspace_init.py
xtask/: Cargo.toml
xtask/fixtures/tui-capture/: mock_provider.py  pevo-tui-demo.tape.tpl
xtask/src/: init.rs  main.rs  paths.rs
xtask/src/ci/: artifacts.rs  desktop_manifest_parity.rs  desktop_visual.rs  mod.rs  model.rs  process.rs  profiles.rs  retention.rs  runner.rs  surface_profile.rs  tui_capture.rs  workbench_visual.rs
xtask/src/doctor/: deps.rs  large_files.rs  mod.rs
xtask/src/live/: environment.rs  mod.rs  registry.rs  verifier.rs
(+1359 files in other folders)
