[workspace]
members = [
    "crates/psychevo-ai",
    "crates/psychevo-agent-core",
    "crates/psychevo-runtime",
    "crates/psychevo-gateway-protocol",
    "crates/psychevo-gateway",
    "crates/psychevo-acp",
    "crates/psychevo-cli",
    "crates/psychevo-eval",
    "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
agent-client-protocol = { version = "=0.13.1", features = ["unstable"] }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22.1"
bytes = "1.9"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
futures = "0.3"
html2text = "0.17.1"
http = "1.3"
ignore = "0.4.23"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
libc = "0.2.182"
insta = "1"
pretty_assertions = "1.4"
portable-pty = "0.9.0"
quick_html2md = "0.2.1"
pulldown-cmark = "0.10"
regex-lite = "0.1.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
ratatui-textarea = "0.9.1"
rmcp = { version = "1.7.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = "2.6"
supports-color = "3.0.2"
tempfile = "3.15"
thiserror = "2.0"
tiktoken = "3.1.4"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "process", "time", "io-util", "io-std", "net", "signal"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.8"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
ts-rs = { version = "10.1", features = ["serde-json-impl", "no-serde-warnings"] }
unicode-width = "0.2"
uuid = { version = "1.11", features = ["v7", "serde"] }
