[package]
name = "psychevo-acp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "psychevo_acp"
path = "src/lib.rs"

[[bin]]
name = "psychevo-acp"
path = "src/main.rs"

[dependencies]
agent-client-protocol.workspace = true
futures.workspace = true
psychevo-ai = { path = "../psychevo-ai" }
psychevo-agent-core = { path = "../psychevo-agent-core" }
psychevo-gateway = { path = "../psychevo-gateway", default-features = false }
psychevo-runtime = { path = "../psychevo-runtime" }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
