[package]
name = "psychevo-agent-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
psychevo-ai = { path = "../psychevo-ai" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
