[package]
name = "psychevo-ai"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
futures.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tiktoken.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
