[package]
name = "psychevo-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "pevo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ignore.workspace = true
psychevo-ai = { path = "../psychevo-ai" }
psychevo-runtime = { path = "../psychevo-runtime" }
ratatui.workspace = true
ratatui-textarea.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-width.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
