[package]
name = "psychevo-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "pevo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
futures.workspace = true
ignore.workspace = true
psychevo-ai = { path = "../psychevo-ai" }
psychevo-acp = { path = "../psychevo-acp" }
psychevo-runtime = { path = "../psychevo-runtime" }
pulldown-cmark.workspace = true
ratatui.workspace = true
ratatui-textarea.workspace = true
regex-lite.workspace = true
serde.workspace = true
serde_json.workspace = true
supports-color.workspace = true
tokio.workspace = true
unicode-width.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
