[package]
name = "psychevo-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["native-channels"]
native-channels = ["psychevo-gateway/native-channels", "dep:qrcode"]

[[bin]]
name = "pevo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
futures.workspace = true
ignore.workspace = true
psychevo-ai = { path = "../psychevo-ai" }
psychevo-agent-core = { path = "../psychevo-agent-core" }
psychevo-acp = { path = "../psychevo-acp" }
psychevo-gateway = { path = "../psychevo-gateway", default-features = false }
psychevo-runtime = { path = "../psychevo-runtime" }
pulldown-cmark.workspace = true
qrcode = { workspace = true, optional = true }
ratatui.workspace = true
ratatui-textarea.workspace = true
regex-lite.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
supports-color.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
unicode-width.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
tungstenite = "0.28"
