[package]
name = "psychevo-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
agent-client-protocol.workspace = true
agent-client-protocol-schema.workspace = true
base64.workspace = true
chrono.workspace = true
feishu-sdk.workspace = true
futures.workspace = true
getrandom.workspace = true
http.workspace = true
percent-encoding.workspace = true
portable-pty.workspace = true
psychevo-agent-core = { path = "../psychevo-agent-core" }
psychevo-ai = { path = "../psychevo-ai" }
psychevo-gateway-protocol = { path = "../psychevo-gateway-protocol" }
psychevo-runtime = { path = "../psychevo-runtime" }
qrcode.workspace = true
reqwest.workspace = true
regex-lite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
