[package]
name = "psychevo-runtime-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
futures.workspace = true
getrandom = "0.4"
psychevo-runtime = { path = "../psychevo-runtime" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
