[package]
name = "psychevo-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
libc.workspace = true
portable-pty.workspace = true
psychevo-agent-core = { path = "../psychevo-agent-core" }
psychevo-ai = { path = "../psychevo-ai" }
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
similar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tiktoken.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
