[package]
name = "psychevo-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
chardetng.workspace = true
chrono.workspace = true
encoding_rs.workspace = true
encoding_rs2.workspace = true
futures.workspace = true
html2text.workspace = true
http.workspace = true
keyring.workspace = true
libc.workspace = true
portable-pty.workspace = true
psychevo-agent-core = { path = "../psychevo-agent-core" }
psychevo-ai = { path = "../psychevo-ai" }
quick_html2md.workspace = true
reqwest.workspace = true
rmcp.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
similar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tiktoken.workspace = true
tokio.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock.workspace = true
