[project]
name = "peval-py"
version = "0.1.0"
description = "Offline agent session message to ATIF trajectory converter"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
]

[project.scripts]
peval-py = "peval_py.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peval_py"]
