[package]
name = "psychevo-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT"

[workspace]

[lib]
name = "psychevo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
linux-capture = ["dep:ashpd", "dep:base64", "dep:png", "dep:tokio", "dep:x11rb"]
native-runtime = ["dep:futures-util", "dep:reqwest", "dep:tauri", "dep:tauri-build", "dep:tokio", "linux-capture"]
wdio-test = ["native-runtime", "dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
ashpd = { version = "0.13.12", default-features = false, features = ["tokio", "screenshot", "documents"], optional = true }
base64 = { version = "0.22.1", optional = true }
futures-util = { version = "0.3", optional = true }
png = { version = "0.18.1", optional = true }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"], optional = true }
tauri = { version = "2.11.5", features = [], optional = true }
tauri-plugin-wdio = { version = "1.2.0", optional = true }
tauri-plugin-wdio-webdriver = { version = "1.2.0", optional = true }
tokio = { version = "1.42", features = ["net", "process", "rt", "sync", "time"], optional = true }
x11rb = { version = "0.13.2", features = ["image"], optional = true }

[build-dependencies]
tauri-build = { version = "2.6.3", features = [], optional = true }
